--- a/src/app/modules/users/components/form-register-location/form-register-location.component.html
+++ b/src/app/modules/users/components/form-register-location/form-register-location.component.html
@@ -13,7 +13,7 @@
     />
 
     <p class="error" *ngIf="checkControl('address', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
   </div>
 </fieldset>
