--- a/src/app/modules/users/components/form-register-subjects/form-register-subjects.component.html
+++ b/src/app/modules/users/components/form-register-subjects/form-register-subjects.component.html
@@ -24,10 +24,10 @@
       formControlName="subject"
     />
     <p class="error" *ngIf="checkControl('subject', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
     <p class="error" *ngIf="checkControl('subject', 'minlength')">
-      La longitud minima es de 3 caracteres
+      La longitud mínima es de 3 caracteres
     </p>
   </div>
 </fieldset>
