--- a/src/app/modules/users/components/form-register-user/form-register-user.component.html
+++ b/src/app/modules/users/components/form-register-user/form-register-user.component.html
@@ -10,10 +10,10 @@
       required
     />
     <p class="error" *ngIf="checkControl('name', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
     <p class="error" *ngIf="checkControl('name', 'minlength')">
-      La longitud minima es de 3 caracteres
+      La longitud mínima es de 3 caracteres
     </p>
   </div>
   <div class="my-2">
@@ -27,10 +27,10 @@
       required
     />
     <p class="error" *ngIf="checkControl('nickname', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
     <p class="error" *ngIf="checkControl('nickname', 'minlength')">
-      La longitud minima es de 3 caracteres
+      La longitud mínima es de 3 caracteres
     </p>
   </div>
   <div class="my-2">
@@ -44,10 +44,10 @@
       required
     />
     <p class="error" *ngIf="checkControl('email', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
     <p class="error" *ngIf="checkControl('email', 'email')">
-      Email no es correcto
+      El email introducido no es correcto
     </p>
   </div>
   <div class="my-2">
@@ -61,7 +61,7 @@
       required
     />
     <p class="error" *ngIf="checkControl('phone', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
   </div>
   <div class="my-2">
@@ -75,7 +75,7 @@
       required
     />
     <p class="error" *ngIf="checkControl('date_of_birth', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
   </div>
   <div class="my-2">
@@ -88,7 +88,7 @@
       required
     />
     <p class="error" *ngIf="checkControl('password', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
   </div>
   <div class="my-2">
@@ -102,7 +102,7 @@
       required
     />
     <p class="error" *ngIf="checkControl('photo', 'required')">
-      Campo es requerido
+      Campo requerido
     </p>
   </div>
 </fieldset>
