--- a/src/app/modules/users/components/form-login/form-login.component.html
+++ b/src/app/modules/users/components/form-login/form-login.component.html
@@ -1,20 +1,24 @@
-<form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="mt-5" *ngIf="!errorAlert" [ngClass]="authService.getUserRoleForStyles() + '-main-font-color'">
-    <div class="mb-3">
-        <label class="form-label">Email</label>
-        <input type="text" class="form-control w-50" formControlName="email">
-        <p class="error mt-1" *ngIf="checkControl('email', 'required')">Campo requerido</p>
-        <p class="error mt-1" *ngIf="checkControl('email', 'pattern')">El email introducido no es válido</p>
+<div class="w-50 mx-auto">
+    <form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="mt-5" *ngIf="!errorAlert" [ngClass]="authService.getUserRoleForStyles() + '-main-font-color'">
+        <div class="mb-3">
+            <label class="form-label">Email</label>
+            <input type="text" class="form-control w-100" formControlName="email">
+            <p class="error mt-1" *ngIf="checkControl('email', 'required')">Campo requerido</p>
+            <p class="error mt-1" *ngIf="checkControl('email', 'pattern')">El email introducido no es correcto</p>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Password</label>
+            <input type="password" class="form-control w-100" formControlName="password">
+            <p class="error mt-1" *ngIf="checkControl('password', 'required')">Campo requerido</p>
+            <p class="error mt-1" *ngIf="checkControl('password', 'minlength')">La longitud mínima es de 4 carácteres</p>
+        </div>
+        <input type="submit" value="Enviar" class="btn btn-dark" [disabled]="!formLogin.valid">
+    </form>
+    
+    <div *ngIf="errorAlert">
+        <div class="card text-center">
+            <p class="m-4 p-4 card-text fw-bolder">{{errorMessage}}</p>
+        </div>
+        <button (click)="returnToLogIn()" class="btn btn-primary mt-3">Volver</button>
     </div>
-    <div class="mb-3">
-        <label class="form-label">Password</label>
-        <input type="password" class="form-control w-50" formControlName="password">
-        <p class="error mt-1" *ngIf="checkControl('password', 'required')">Campo requerido</p>
-        <p class="error mt-1" *ngIf="checkControl('password', 'minlength')">La longitud mínima es de 4 carácteres</p>
-    </div>
-    <input type="submit" value="Enviar" class="btn btn-dark" [disabled]="!formLogin.valid">
-</form>
-
-<div *ngIf="errorAlert">
-    <p class="error">{{errorMessage}}</p>
-    <button (click)="returnToLogIn()" class="btn btn-dark">Volver</button>
 </div>
