más retoques, botón admin control visible

--- a/src/app/modules/home/components/home/home-components/hero-section/hero-section.component.html
+++ b/src/app/modules/home/components/home/home-components/hero-section/hero-section.component.html
@@ -10,7 +10,7 @@
   <h1 class="display-5 fw-bold mb-4" [ngClass]="authService.getUserRoleForStyles() + '-main-font-color'">¿Qué quieres aprender?</h1>
   <div class="col-lg-6 mx-auto">
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn-orangeyellow btn-lg px-4 py-3" [routerLink]="['/teachers']">Buscar Profesores</button>
+      <button type="button" class="btn btn-lg px-4 py-3" [ngClass]="authService.getUserRoleForStyles() + '-btn-controlpanel'" [routerLink]="['/teachers']">Buscar Profesores</button>
     </div>
   </div>
 </div>
